--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+	Copyright (c) 2014 Michael F. Quigley Jr.
+	
+	This file is part of Quigley Meters.
+	
+	Quigley Meters is free software: you can redistribute it and/or modify
+	it under the terms of the GNU Lesser General Public License as 
+	published by the Free Software Foundation, either version 3 of 
+	the License, or (at your option) any later version.
+	
+	Quigley Meters is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU Lesser General Public License for more details.
+	
+	You should have received a copy of the GNU Lesser General Public 
+	License along with Quigley Meters. If not, see <http://www.gnu.org/licenses/>.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
@@ -6,7 +24,29 @@
 	<artifactId>meters</artifactId>
 	<packaging>jar</packaging>
 	<version>0.0.1</version>
-
+	
+	<name>Quigley Meters</name>
+	<url>http://quigley.com/</url>
+	<description>Quigley Meters is a Java/Swing component and supporting framework for displaying real-time sampled data.</description>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:https://github.com/michaelquigley/meters.git</connection>
+		<url>https://github.com/michaelquigley/meters</url>
+	</scm>
+	<developers>
+		<developer>
+			<id>michaelquigley</id>
+			<name>Michael Quigley</name>
+			<email>michael@quigley.com</email>
+		</developer>
+	</developers>	
+		
 	<build>
 		<plugins>
 			<plugin>
